Columns of projects are now working correctly and align better with the page

--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -1,11 +1,3 @@
-.projects-description-text {
-    text-align: justify;
-}
-
-.projects-card {
-    cursor: pointer;
-}
-
 .projects-card-image {
     max-height: 300px;
     object-fit: cover;
